--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DB_USERNAME="root"
 DB_PASSWORD="rintaro45"
 DB_HOST="rds-mysql-server.c38pnfvsjhhz.ap-northeast-1.rds.amazonaws.com"
-DB_DATABASE="Honde、Donaiyanen。"
+DB_DATABASE="Honde-Donaiyanen-"
