--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Honde、Donaiyanen。",
+  "name": "HondeDonaiyanen",
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-methods": "^7.18.6",
